src/Istio-request-authentication/dex-jwt-service-account-issuer.yaml
apiVersion: security.istio.io/v1
kind: RequestAuthentication
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"security.istio.io/v1","kind":"RequestAuthentication","metadata":{"annotations":{},"creationTimestamp":"2025-12-26T06:15:13Z","generation":4,"name":"dex-jwt","namespace":"istio-system","resourceVersion":"218476092","uid":"06c85868-328e-4f58-aace-c16f6fccdaee"},"spec":{"jwtRules":[{"forwardOriginalToken":true,"fromHeaders":[{"name":"Authorization","prefix":"Bearer "}],"issuer":"http://dex.auth.svc.cluster.local:5556/dex","outputClaimToHeaders":[{"claim":"email","header":"kubef [...]
  creationTimestamp: "2025-12-26T06:15:13Z"
  generation: 5
  name: dex-jwt
  namespace: istio-system
  resourceVersion: "219031074"
  uid: 06c85868-328e-4f58-aace-c16f6fccdaee
spec:
  jwtRules:
  - forwardOriginalToken: true
    fromHeaders:
    - name: Authorization
      prefix: 'Bearer '
    issuer: http://dex.auth.svc.cluster.local:5556/dex
    outputClaimToHeaders:
    - claim: email
      header: kubeflow-userid
    - claim: groups
      header: kubeflow-groups
  - forwardOriginalToken: true
    fromHeaders:
    - name: Authorization
      prefix: 'Bearer '
    issuer: kubernetes/serviceaccount
    jwks: '{"keys":[{"use":"sig","kty":"RSA","kid":"d-xN_I-QoWzO8QbZ9AfenuRnnf3v_PlwyMn7D7dr9sM","alg":"RS256","n":"oc-skUSgRVKloH_52xC9EcA68xcqjJIULzrNmvqHlvFFlnsTvz9Iz7cR_1vN8obkoDQsa-Lc_bOIewFnLkgRcbO15TP5snNReCsQ17M8paLwKohscpstgp1NA25s_O-n_dETSKh6jbAeapVrR2vAyiUnR9vuepwuxkxsci-E4WNaK2oZ9KEBpUUXaeWlvqfMX8GX5gj7YxPVuCyBnKRfwpXFPHQlX_2bi7SNGfWJUWeGJ2o5VfVZtrDTdW3zmCrTRfDNlq-wZlv9FDLD0DXwlsVL3ZAJ_dCv1Vuao_Ji60i-G015UwWPuwQ735cRBEyN_I1Ge--GvhemDQNnmz5I-Q","e":"AQAB"}]}'
    outputClaimToHeaders:
    - claim: sub
      header: kubeflow-userid
  selector:
    matchLabels:
      app: istio-ingressgateway
